--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Agario</title>
 </head>
 <body>
     <div class="room-container">
@@ -18,7 +18,6 @@
     <canvas id="gameCanvas"></canvas>
 </body>
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
-<script src="game.js"></script>
 <script>
     let i = 0;
     let room = '';
@@ -40,7 +39,7 @@
         i++;
         console.log(text.value);
         //socket.emit('message', `Message ${i}`);
-        socket.emit('room', text.value, `Message room ${i}`);
+        socket.emit('room', text.value, `Message ${i}`);
     }
     text.addEventListener('change', (e) => {
         socket.emit('leave', room);
@@ -48,4 +47,5 @@
         room = e.target.value;
     });
 </script>
+<script src="game.js"></script>
 </html>
