:wrench: wip agario

--- a/front/index.html
+++ b/front/index.html
@@ -7,13 +7,15 @@
     <title>Agario</title>
 </head>
 <body>
-    <div class="room-container">
-        <p>Room</p>
-        <p class="room"></p>
-    </div>
-    <div class="input-container">
-        <input name="" id="" cols="30" rows="10"></input>
-        <button onclick="send()">submit</button>
+    <div class="container">        
+        <div class="room-container">
+            <p>Room</p>
+            <p class="room"></p>
+        </div>
+        <div class="input-container">
+            <input name="" id="" cols="30" rows="10"></input>
+            <button onclick="send()">submit</button>
+        </div>
     </div>
     <canvas id="gameCanvas"></canvas>
 </body>
